[gd_scene load_steps=4 format=3 uid="uid://yjabmq8cfifj"]

[ext_resource type="Texture2D" uid="uid://d0tab2ffq7i6k" path="res://Assets/props/pressure plate/Plate.png" id="1_4k3hl"]
[ext_resource type="Script" path="res://props/Caller/plate/plate.gd" id="1_pdb4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tyrx"]
size = Vector2(14, 5)

[node name="pressure_plate" type="Node2D"]
visibility_layer = 4
script = ExtResource("1_pdb4t")

[node name="Plate" type="Sprite2D" parent="."]
modulate = Color(0.470588, 0.470588, 0.470588, 1)
texture = ExtResource("1_4k3hl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 5
visibility_layer = 4
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_5tyrx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
